fix(jmx): remove reference to Permanent memory settings
This memory space has been removed in Java 8 so the related settings are not releavant anymore.
So remove it from the example.